@@ -1,1 +1,0 @@
-The party vCard DAV module of the Tryton application platform.
